--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,7 @@
-file.reference.caviste-public_html=public_html
-file.reference.caviste-test=test
-files.encoding=UTF-8
-site.root.folder=${file.reference.caviste-public_html}
-test.folder=${file.reference.caviste-test}
+include.path=${php.global.include.path}
+php.version=PHP_56
+source.encoding=UTF-8
+src.dir=.
+tags.asp=false
+tags.short=false
+web.root=.
