--- a/caviste/composer.json
+++ b/caviste/composer.json
@@ -22,9 +22,10 @@
         }
     ],
     "require": {
-        "ext-json": "*",
-        "monolog/monolog": "^1.24",
         "php": ">=7.1",
+        "ext-json": "*",
+        "gabordemooij/redbean": "^5.4",
+        "monolog/monolog": "^1.24",
         "php-di/php-di": "^6.0",
         "slim/psr7": "^0.5",
         "slim/slim": "^4.1"
